[gd_scene load_steps=4 format=3 uid="uid://b1veyd6m1kwqn"]

[ext_resource type="Script" path="res://user_interface/menus/pause_menu.gd" id="1_hs78b"]

[sub_resource type="InputEventAction" id="InputEventAction_fxj05"]
action = &"exit"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_4v2b7"]
events = [SubResource("InputEventAction_fxj05")]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_hs78b")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -78.0
offset_right = 90.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_4v2b7")
shortcut_in_tooltip = false
text = "Resume"

[node name="SettingsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Settings"

[node name="StartMenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit To Menu"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit To Desktop"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/StartMenuButton" to="." method="_on_start_menu_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
